welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur=0

while (!sortieTrouvee())
{
 do {
 	
 if ( compteur>=3) {
 	gauche()
 	avance()
 }
 else {
 	droite()
 	avance()
 }
 		
 } while(!croisement())



